# xixspoof

./: Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/animation/: info.rs  mod.rs  tasks.rs  uploader.rs
src/script/: mod.rs  script_editor.rs  script_parser.rs  types.rs
src/studio/: dom_parser.rs  mod.rs  workplace_editor.rs
