[package]
name = "animation-replace-roblox"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
url = "2.5.4"
rbx_dom_weak = "3.0.0"
rbx_binary = "1.0.0"
ustr = "1.1.0"
rbx_types = "2.0.0"
regex = "1.11.1"
shellexpand = "3.1.1"
log = "0.4.27"
clap = { version = "4.1.13", features = ["derive"] }
reqwest = "0.12.21"
roboat = { git = "https://github.com/shibahex/roboat-extras.git", branch = "main" }
#roboat = "0.36.0"
anyhow = "1.0.98"
indexmap = "2.10.0"
